<resources>
    <string name="app_name">Capstone Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Sign Up</string>
    <string name="signup_btn">SIGN UP</string>
    <string name="name">Name</string>
    <string name="mail">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_up_social_account">Or sign up with social account</string>
    <string name="chat_pala">Chatpala</string>
    <string name="avm">shop</string>

    <string name="login">Login</string>
    <string name="login_button">LOGIN</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="login_social_account">Or login with social account</string>

    <string name="forgot_password">Forgor Password</string>
    <string name="send">SEND</string>
    <string name="forgot_mail_info">Please, enter your email address. You will receive a link to create a new password via email.</string>
    <string name="forgot_mail_error">Not a valid email address. Should be your@email.com</string>


    <string name="facebook_app_id">627488304972911</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

    <!-- nav bar string-->
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="bag">Bag</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>

    <!-- Market Texts-->
    <string name="main_page_fragment">MainPage Fragment</string>
    <string name="shop_fragment">Shop Fragment</string>
    <string name="bag_fragment">Bag Fragment</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="check">Check</string>
    <string name="fashion_sale">Fashion Sale</string>
    <string name="txt_new">New</string>
    <string name="txt_ad">You’ve never seen it before!</string>
    <string name="view_all">View all</string>
    <string name="product_old_price"><strike>21$</strike></string>

    <string name="categories">Categories</string>
    <string name="btn_all_items">View All Items</string>
    <string name="choose_category">Choose category</string>
    <string name="category_item">Category Item</string>
    <string name="bag_item_name">Pullover</string>
    <string name="bag_item_color">Color:</string>
    <string name="bag_item_color_black">Black</string>
    <string name="bag_item_size">Size:</string>
    <string name="bag_item_size_L">L</string>
    <string name="bag_item_count">1</string>
    <string name="bag_item_count_down">—</string>
    <string name="bag_item_count_up">+</string>
    <string name="bag_item_total_amount">51$</string>
    <string name="my_bag">My Bag</string>
    <string name="enter_promo_code">Enter your promo code</string>
    <string name="bag_total_amount">Total amount:</string>
    <string name="bag_total_amount_123">123$</string>
    <string name="check_out">Check Out</string>

    <string name="new_product">NEW</string>
    <string name="reduced_product">-20%</string>

    <string name="detail_product_title">Short dress</string>
    <string name="detail_product_brand">H&amp;M</string>
    <string name="detail_mini_desc">Short black dress</string>
    <string name="detail_full_desc">Short dress in soft cotton jersey with decorative buttons down the front and a wide, frill-trimmed square neckline with concealed elastication. Elasticated seam under the bust and short puff sleeves with a small frill trim.</string>
    <string name="detail_product_amount">$19.99</string>
    <string name="btn_add_cart">ADD TO CART</string>


</resources>