<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:background="@color/app_white"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:id="@+id/ll_item_bag"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:orientation="horizontal"
            android:weightSum="7">

            <ImageView
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:layout_weight="1"
                android:src="@drawable/model" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_item_bag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginTop="11dp"
                android:layout_weight="6">

                <TextView
                    android:id="@+id/bag_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bag_item_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/ll_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bag_product_name">

                    <TextView
                        android:id="@+id/bag_item_product_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="@string/bag_item_color"
                        android:textColor="@color/app_gray"
                        android:textSize="11sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/bag_product_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="@string/bag_item_color_black"
                        android:textColor="@color/app_black"
                        android:textSize="11sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@id/ll_color"
                    app:layout_constraintTop_toTopOf="@+id/bag_product_name">

                    <TextView
                        android:id="@+id/bag_item_product_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="@string/bag_item_size"
                        android:textColor="@color/app_gray"
                        android:textSize="11sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/bag_product_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="@string/bag_item_size_L"
                        android:textColor="@color/app_black"
                        android:textSize="11sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_item_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_color">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bag_item_count_down"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/ic_favorite_circle"
                        android:text="@string/bag_item_count_down"
                        android:textColor="@color/app_gray"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bag_item_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="@string/bag_item_count"
                        android:textColor="@color/app_black"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bag_item_count_up"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/ic_favorite_circle"
                        android:text="@string/bag_item_count_up"
                        android:textColor="@color/app_gray"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="4dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/ic_dots"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/bag_item_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/bag_item_total_amount"
                    android:textColor="@color/app_black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</layout>
